--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=demo
+spring.data.mongodb.uri=mongodb+srv://root:root1234@cluster0.9dtcyul.mongodb.net/tasks
+server.port=8081
