--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=demo
-spring.data.mongodb.uri=mongodb+srv://root:root1234@cluster0.9dtcyul.mongodb.net/tasks
+spring.data.mongodb.uri=mongodb+srv://yashkholsa061100:PtfiNx3TfMgQB5ks@cluster0.mp9q34t.mongodb.net/tasks
 server.port=8081
